# nbcli

./: .gitignore  README.md  examples.md  nbcli  nbcli.py  netbox_dump.json  netbox_dump.yaml  pyproject.toml
completions/: _nbcli  nbcli.bash
nbcli/: cli.py
nbcli/utils/: formatters.py
scripts/: generate_examples.py  setup_completion.sh
src/nbcli/: __init__.py  __main__.py  cli.py
src/nbcli/utils/: formatters.py
