[project]
name = "nbcli"
version = "0.1.0"
description = "Command-line tool to interrogate a NetBox 4.4 API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-dotenv",
  "pyyaml",
  "requests",
]

[project.scripts]
nbcli = "nbcli.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["nbcli", "nbcli.utils"]
